tests/NormalTests/paczka1/fuzzy1/92097161.err
Error in line 4: 5C6zgX5Tv S794 15,1
Error in line 8: 5C6zgX5Tv A973 19,4
Error in line 2: A962 A962 10,8
Error in line 18: JBBmM S794 11,2
